--- a/fr/index.html
+++ b/fr/index.html
@@ -76,8 +76,8 @@
         <!-- Hero -->
         <div id="hero">
           <div class="hero-message">
-            <h1>Serbian Apple</h1>
-            <h2>healthy and refreshing. always.</h2>
+            <h1>Pomme Serbe</h1>
+            <h2>bienfaits et fraîcheur. toujours.</h2>
             <button type="button" class="hero-btn">
               <a href="#products">Lire la suite</a>
             </button>
@@ -105,7 +105,6 @@
             permis au secteur fruitier moderne et contemporain de la Serbie de
             se développer.
           </p>
-          <div id="readmore" style="display: none">
           <p>
             Fruit Revolution a vu le jour grâce à l'idée de produire et d'offrir
             des fruits de la plus haute qualité. En collaboration avec nos
@@ -114,6 +113,7 @@
             qualité et la continuité des livraisons, avec le meilleur rapport
             qualité-prix.
           </p>
+          <div id="readmore" style="display: none">
             <p>
               La société Fruit Revolution opère dans trois domaines: dans la
               production de fruits, leur rachat et dans la logistique. En
@@ -175,7 +175,7 @@
             <div class="stat">
               <div class="stat-image">
                 <img
-                  src="../icons/trees.png"
+                  src="../icons/trees1.png"
                   alt="trees"
                 />
               </div>
