--- a/fr/index.html
+++ b/fr/index.html
@@ -175,7 +175,7 @@
             <div class="stat">
               <div class="stat-image">
                 <img
-                  src="../icons/trees1.png"
+                  src="../icons/trees.png"
                   alt="trees"
                 />
               </div>
