--- a/fr/index.html
+++ b/fr/index.html
@@ -87,7 +87,7 @@
         <div class="splitter"></div>
         <!-- About -->
         <div id="about">
-          <h2>Bienvenue chez Fruit Revolution</h2>
+          <h2>Bienvenue chez "Fruit Revolution"</h2>
           <p>
             Fruit Revolution est l'un des plus importants et des plus avancés
             producteurs et fournisseurs de fruits de haute qualité en Serbie.
